Responsive and endpoints 1/2

--- a/env.example
+++ b/env.example
@@ -10,4 +10,7 @@ VITE_APP_ENV=development
 VITE_APP_NAME=TakeDash
 
 # Optional: External services
-VITE_UPLOAD_URL=http://localhost:3000/api/upload 
+VITE_UPLOAD_URL=http://localhost:3000/api/upload
+
+# Optional: Mock data (set to false for production)
+VITE_USE_MOCK_DATA=false 
