--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,9 @@ VITE_UPLOAD_URL=https://take-backend-production.up.railway.app/api/upload
 # Demo mode (bypass authentication)
 VITE_DEMO_MODE=false
 VITE_USE_MOCK_DATA=false
+
+# Google Wallet Configuration
+# TODO: Set your Google Wallet OAuth Client ID here
+# You can get this from Google Cloud Console -> APIs & Services -> Credentials
+# Create a new OAuth 2.0 Client ID for Web application
+VITE_GOOGLE_WALLET_CLIENT_ID=278446800173-bkimp7qpcljhok44p2t47inva02u26i1.apps.googleusercontent.com
